Add job to update cache when a change is detected on the database side